  * Moloch >= 2.0.0 requires NodeJS 10.x
  * Moloch >= 1.6.0 requires NodeJS 8.x, 8.12 or later
  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading
NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading

4.3.1 2023/05/xx
  - release - fix ubuntu22 kafka dep

4.3.0 2023/04/27
  - BREAKING - Only SuperAdmin can assign *Admin roles now
  - release - fix kafka library linking
  - release - al2023 support
  - release - improve arkime_config_interfaces.sh
  - release - Configure doesn't offer demo Elasticsearch on Arch
  - release - reqBodyOnlyUtf8=true in sample config file
  - all - support colon in OpenSearch/Elasticsearch password
  - all - fix some prototype pollution
  - all - improve roles enforcement
  - all - New authTrustProxy setting
  - capture - tcpClosingTimeout setting controls delay before saving tcp
              sessions after close
  - capture - default dbBulkSize to 1M, min 500K, max 15M and removed 
              from sample config file
  - capture - s3 writer now writes multiple files based on packetThreads
  - capture - s3 writer supports zstd, s3Compression setting
  - capture - s3 writer compression level, s3CompressionBlockSize setting
  - capture - s3 writer block size, s3CompressionBlockSize setting
  - capture - s3 writer gap encoding, s3GapPacketPos setting
  - capture - s3 writer when s3UseECSEnv is true use container env vars to find 
              the id/key/token for s3 auth
  - capture - improve Gh0st parser (#2225)
  - capture - new dnp3 & finger classifier
  - capture - tcphealthcheck adding debugging
  - capture/viewer - includes setting ignores missing files starting with -
  - cont3xt - add malicious tidbit from urlscan results
  - cont3xt - add malicious and brand columns to results table for urlscan
  - cont3xt - link group UI improvements